# master-ia-agentica-rodrigo

./: .gitignore  README.md  requirements.txt
docs/: Guia_repositorio_VSCode_Master_IA_Agentica_Rodrigo_Benitez.docx
scripts/: build_notebooks.py
tema-02-machine-learning/: .gitignore  .tema2-root  1_supervised_classification_model.ipynb  2_unsupervised_classification_model.ipynb  AGENTS.md  INSTRUCCION_CODEX_TEMA2_MODULAR.md  MODULE1_SHA256SUMS.txt  README.md
tema-02-machine-learning/02-deep-learning-redes-neuronales/: README.md
tema-02-machine-learning/03-redes-multicapa-convolucionales-vision/: README.md
tema-02-machine-learning/04-Fundamentos de NLP/: README.md  nlp-fundamentos.ipynb  requirements.txt
tema-02-machine-learning/05-mini-gpt-desde-cero/: .gitignore  README.md  pyproject.toml
tema-02-machine-learning/05-mini-gpt-desde-cero/notebooks/: mini-gpt-desde-cero.ipynb  mini-gpt-desde-cero.original.ipynb
tema-02-machine-learning/05-mini-gpt-desde-cero/src/minigpt/: __init__.py  checkpoint.py  cli.py  config.py  corpus.py  data.py  device.py  generation.py  model.py  tokenizer.py  training.py  visualization.py
tema-02-machine-learning/05-mini-gpt-desde-cero/tests/: conftest.py  test_attention.py  test_checkpoint.py  test_data.py  test_generation.py  test_model.py  test_smoke_training.py  test_tokenizer.py
tema-02-machine-learning/05-mini-gpt-desde-cero/tests/fixtures/: smoke.txt
tema-02-machine-learning/input_notebooks/: 1_manual_neural_network_model.ipynb  1_red_neuronal_desde_cero.ipynb  1_red_neuronal_multicapa.ipynb  README.md  SHA256SUMS.txt  (+5 more)
(+93 files in other folders)
