[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "master-minigpt"
version = "0.1.0"
description = "Mini-GPT decoder-only educativo implementado manualmente con PyTorch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.2,<3",
  "numpy>=1.26,<3",
  "matplotlib>=3.8,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.8,<1",
  "jupyterlab>=4,<5",
  "nbconvert>=7,<8",
]

[project.scripts]
minigpt = "minigpt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --basetemp=.pytest-tmp"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
  ".pytest-tmp",
  "notebooks/mini-gpt-desde-cero.original.ipynb",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
